--- a/index.html
+++ b/index.html
@@ -42,9 +42,15 @@
     <div>
         <img style="float: left;" src="//assets.teleflora.com/images/banners/pink-banner-left.gif" alt="left side image" width="18" height="28">
         <img style="float: right;" src="//assets.teleflora.com/images/banners/pink-banner-right.gif" alt="right side image" width="18" height="28">
-        Same Day and Next Day Delivery Available On All Bouquets! Shop Now »
+        <p> Same Day and Next Day Delivery Available On All Bouquets! Shop Now » </p>
     </div>
 </a>
+<center>
+    <img src="flowers.jpg" style="
+    width: 800px;
+    height: 500px;
+">
+</center>
 
 
 
@@ -55,18 +61,23 @@
 
 <!-- Blossom  -->
 
-<strike>100$</strike>
+<strike>$100</strike>
 
-<a class='my-tool-tip' data-toggle="tooltip" data-placement="right"
-   title="sign in / sign up">
-    <i class='glyphicon glyphicon-user'> </i>
+
+<a class='user' data-toggle="user" data-placement="right" title="Signin / Sign up" href="index.html">
+    <span class='glyphicon glyphicon-user'> </span>
 </a>
-
+<a class='cart' data-toggle="user" data-placement="right" title="Check Out" href="index.html">
+    <span class='glyphicon glyphicon-shopping-cart'></span>
+</a>
 
 
 <script>
     $(document).ready(function(){
-        $('[data-toggle="tooltip"]').tooltip();
+        $('[data-toggle="user"]').tooltip();
+    });
+    $(document).ready(function(){
+        $('[data-toggle="cart"]').tooltip();
     });
 </script>
 
