--- a/index.html
+++ b/index.html
@@ -51,6 +51,23 @@
     height: 500px;
 ">
 </center>
+<nav class="navbar navbar-default">
+
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="navbar-collapse-2">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Works</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+
+        </div><!-- /.navbar-collapse -->
+
+</nav><!-- /.navbar -->
 
 
 
