--- a/test.html
+++ b/test.html
@@ -8,6 +8,28 @@
     <link rel="stylesheet" href="stylesheet.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <script>
+        $(function() {
+            var availableTags = [
+                "About",
+                "Check Out",
+                "Cart",
+                "Contact Info",
+                "Frequently Asked Question",
+                "Personal Profile",
+                "Producta Page",
+                "Home",
+            ];
+            $( "#tags" ).autocomplete({
+                source: availableTags
+            });
+        });
+    </script>
 </head>
 <body>
 
@@ -39,15 +61,14 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-                    <li><a href="#">Link</a></li>
+                    <li class="active"><a href="test.html">Home <span class="sr-only">(current)</span></a></li>
+                    <li><a href="#">About</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Products <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li role="separator" class="divider"></li>
+                            <li><a href="#">Valentine Flowers</a></li>
+                            <li><a href="#">Wedding Flowers</a></li>
+                            <li><a href="#">Birthday Flowers</a></li>
                             <li><a href="#">Separated link</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="#">One more separated link</a></li>
@@ -55,12 +76,16 @@
                     </li>
                 </ul>
 
-                <form class="navbar-form navbar-left" role="search">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
+                <form class="navbar-form navbar-left" role="search" method="post" action="search.php">
+                    <div class="ui-widget">
+                        <label for="tags"> </label>
+                        <input id="tags" name="search" class="form-control">
+                        <button type="submit" class="btn btn-default">Search</button>
                     </div>
-                    <button type="submit" class="btn btn-default">Search</button>
+
                 </form>
+
+
 
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">Link</a></li>
@@ -73,8 +98,8 @@
                         </ul>
                     </li>
                 </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
+            </div>
+        </div>
 
     </nav>
 
@@ -82,6 +107,16 @@
 
 
 </div>
+<div class="jumbotron">
+<div class="row" style="text-align: center">
+    <div class="col-md-3">.col-md-5</div>
+    <div class="col-md-3">.col-md-5</div>
+    <div class="col-md-3">.col-md-5</div>
+    <div class="col-md-3">.col-md-5</div>
+</div>
+</div>
+
+
 
 </body>
 </html>
