Saturday And Sunday Work

--- a/signin.html
+++ b/signin.html
@@ -55,7 +55,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-center">
-                <li><a href="test.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="unavailable.html">Valentine</a></li>
                 <li><a href="unavailable.html">Wedding</a></li>
                 <li><a href="unavailable.html">Birthday</a></li>
