--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8"> <!-- tell internet to use the latest rendering engine -->
     <meta http-eqiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width = device-width, initial- scle = 1">
-    <title>Show</title>
+    <title>Home</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="stylesheet.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
@@ -44,10 +44,11 @@
 
         <p>5405 N 99th Ave., Glendale, AZ 85305
 
-            <a class='cart' href="index.html">
+            <a class='cart' href="signin.html">
                 <span class='glyphicon glyphicon-user'> </span>
+            </a>
                 <span class='glyphicon glyphicon-shopping-cart'> </span>
-            </a> (0) cart
+            (0) cart
         </p>
 
         </div>
@@ -67,7 +68,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-center">
-                    <li class="active"><a href="test.html">Home <span class="sr-only">(current)</span></a></li>
+                    <li class="active"><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
                     <li><a href="unavailable.html">Valentine</a></li>
                     <li><a href="unavailable.html">Wedding</a></li>
                     <li><a href="unavailable.html">Birthday</a></li>
@@ -78,10 +79,10 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Other <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">About</a></li>
+                            <li><a href="about.html">About</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="#">Frequently Asked Questions</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </li>
                 </ul>
