--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"> <!-- tell internet to use the latest rendering engine -->
     <meta http-eqiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width = device-width, initial- scle = 1">
-    <title>Signup</title>
+    <title>Sign up</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="loginstyle.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
@@ -45,7 +45,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-center">
-                <li><a href="test.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="unavailable.html">Valentine</a></li>
                 <li><a href="unavailable.html">Wedding</a></li>
                 <li><a href="unavailable.html">Birthday</a></li>
@@ -80,7 +80,7 @@
 <div id="login-overlay" class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
-            <h4 class="modal-title" id="myModalLabel"><i>Login to Blossoms </i></h4>
+            <h4 class="modal-title" id="myModalLabel"><i>Sign up to Blossoms </i></h4>
         </div>
 
         <div class="modal-body">
@@ -114,18 +114,18 @@
 
                             <label>Password</label><br>
 
-                            <input type="password" name="password" class="span3"><br>
+                            <input type="password" name="password" class="span3" style="margin-bottom: 10px;"><br>
 
                             <label><input type="checkbox" name="terms"> I agree with the <a href="https://termsfeed.com/legal/terms-of-use">Terms and Conditions</a>.</label>
 
-                            <input type="submit" value="Sign up" class="btn btn-primary pull-right" style="margin-bottom: 20px; margin-right: 20px;">
+                            <input type="submit" value="Sign up" class="btn btn-primary pull-right" style="margin-bottom: 10px; margin-right: 20px;">
 
                             <div class="clearfix"></div>
 
                         </form>
 
                         <div class="panel-footer" style="margin-top: 10px;">
-                            Don't have an account! <a href="signup.html" onClick=""> Sign Up Here </a>
+                            Already have an account? <a href="signin.html" onClick=""> Sign in Here </a>
                         </div>
 
                     </div>
