Mondays work: Finish valentines page and get buttons setup

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-center">
                     <li><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
-                    <li><a href="unavailable.html">Valentine</a></li>
+                    <li><a href="valentine.html">Valentine</a></li>
                     <li><a href="unavailable.html">Wedding</a></li>
                     <li><a href="unavailable.html">Birthday</a></li>
                     <li><a href="unavailable.html">Sympathy</a></li>
@@ -53,10 +53,10 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Other <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li class="active"><a href="about">About</a></li>
+                            <li class="active"><a href="about.html">About</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="#">Frequently Asked Questions</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -80,11 +80,11 @@
         <img src="blossoms.png" style="float: right; height:300px;">
         <center> <h2 style="color: #4FC4FB; font-family: serif;"><strong> ABOUT THE COMPANY </strong></h2> </center>
             <p style="font-size:20px;"> Blossoms Flower Shop has been committed to providing the highest quality flowers and plants available at the fairest price possible. Deals are what makes Blossoms so great that we try to provide amazing gifts fr low prices. With our shops the customer is very important to us and we strive to give professional attention to every order. Our entire staff is dedicated to delivering the same high level of customer service that valley residents have come to expect.  </p>
-             <h2 style="color: #4FC4FB; font-family: serif; position: relative; left: 555px;"><strong> WHY US? </strong></h2> 
-<img src="blossoms.png" style="float: left; height:300px;">
+             <h2 style="color: #4FC4FB; font-family: serif; position: relative; left: 420px;"><strong> WHY US? </strong></h2>
+<img src="https://www.ftdimg.com/pics/products/zoom/C16-4839E_600x600.jpg" style="float: left; height:300px; width: 290px; margin-right: 30px">
             <p style="font-size:20px;">We custom select flower shops in cities across the country with the highest qualification and capabilities to satisfy the most discriminating customer. Most florists we affiliate with have been personally selected to serve on our "Preferred Florist" list that we refer to when sending orders that are not in our delivery area.</p>
 
-            <p style="font-size:20px;"> You can rest assured when you place an order with Blossoms, our satisfaction guarantee is always included. Once you place your first order with Phoenix Flower Shops, we maintain any special information and all addresses of your recipients for your future use. Next time, all you need to do is make a selection and give us a name! Easy as that! </p>
+            <p style="font-size:20px;"> You can rest assured when you place an order with Blossoms, our satisfaction guarantee is always included. Once you place your first order with Blossoms, we maintain any special information and all addresses of your recipients for your future use. Next time, all you need to do is make a selection and give us a name! Easy as that! </p>
             
     </div>
 </div>
