--- a/signup.html
+++ b/signup.html
@@ -46,7 +46,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-center">
                 <li><a href="home.html">Home</a></li>
-                <li><a href="unavailable.html">Valentine</a></li>
+                <li><a href="valentine.html">Valentine</a></li>
                 <li><a href="unavailable.html">Wedding</a></li>
                 <li><a href="unavailable.html">Birthday</a></li>
                 <li><a href="unavailable.html">Sympathy</a></li>
