--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@ window.onload = loadScript;
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-center">
                     <li><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
-                    <li><a href="unavailable.html">Valentine</a></li>
+                    <li><a href="valentine.html">Valentine</a></li>
                     <li><a href="unavailable.html">Wedding</a></li>
                     <li><a href="unavailable.html">Birthday</a></li>
                     <li><a href="unavailable.html">Sympathy</a></li>
@@ -95,9 +95,11 @@ window.onload = loadScript;
     <div class="jumbotron">
         <div class="container">
             <h1> Contact Us!</h1>
-      
-            <h2>Find us here!</h2>
+
+            <div style="float: right">
+                <h2>Find us here!</h2>
                 <div id="googleMap" style="width:300px;height:300px;"></div>
+            </div>
             <h3> Location </h3>
             <p> 5405 N 99th Ave., Glendale, AZ 85305</p> 
             <h3>Email and Phone Number</h3>  
