--- a/contact.html
+++ b/contact.html
@@ -94,17 +94,20 @@ window.onload = loadScript;
 <div class="container">
     <div class="jumbotron">
         <div class="container">
-            <h1> Contact Us!</h1>
 
             <div style="float: right">
-                <h2>Find us here!</h2>
-                <div id="googleMap" style="width:300px;height:300px;"></div>
-            </div>
+            <h2>Find us here!</h2>
+            <div id="googleMap" style="width:300px;height:300px;"></div>
+        </div>
+            <h1> Contact Us!</h1>
+
             <h3> Location </h3>
-            <p> 5405 N 99th Ave., Glendale, AZ 85305</p> 
-            <h3>Email and Phone Number</h3>  
-            <p> <a href="www.gmail.com">blossoms@gmail.com </a> Number: (623)-738-0045 Fax: (623) 872-1682 </p>
-                
+            <p> 5405 N 99th Ave., Glendale, AZ 85305</p>
+            <h3>Email</h3>
+            <p> <a href="www.gmail.com">blossoms@gmail.com </a></p>
+            <h3>Phone Number</h3>
+            <p>Number: (623)-738-0045 </p>
+            <p>Fax: (623) 872-1682</p>
         </div>
     </div>
 </div>
