--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,8 @@ window.onload = loadScript;
                     <li><a href="unavailable.html">Sympathy</a></li>
                     <li><a href="unavailable.html">Graduation</a></li>
                     <li><a href="unavailable.html">Just Because</a></li>
+                    <li><a href="cart.html">Cart <span class='glyphicon glyphicon-shopping-cart'></span></a></li>
+
 
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Other <span class="caret"></span></a>
@@ -108,6 +110,7 @@ window.onload = loadScript;
             <h3>Phone Number</h3>
             <p>Number: (623)-738-0045 </p>
             <p>Fax: (623) 872-1682</p>
+            <p></p>
         </div>
     </div>
 </div>
