--- a/about.html
+++ b/about.html
@@ -49,6 +49,7 @@
                     <li><a href="unavailable.html">Sympathy</a></li>
                     <li><a href="unavailable.html">Graduation</a></li>
                     <li><a href="unavailable.html">Just Because</a></li>
+                    <li><a href="cart.html">Cart <span class='glyphicon glyphicon-shopping-cart'></span></a></li>
 
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Other <span class="caret"></span></a>
@@ -78,9 +79,9 @@
     <div class="jumbotron">
         <div class="container">
         <img src="blossoms.png" style="float: right; height:300px;">
-        <center> <h2 style="color: #4FC4FB; font-family: serif;"><strong> ABOUT THE COMPANY </strong></h2> </center>
+        <center> <h2 >About The Company</h2> </center>
             <p style="font-size:20px;"> Blossoms Flower Shop has been committed to providing the highest quality flowers and plants available at the fairest price possible. Deals are what makes Blossoms so great that we try to provide amazing gifts for low prices. With our shops the customer is very important to us and we strive to give professional attention to every order. Our entire staff is dedicated to delivering the same high level of customer service that valley residents have come to expect.  </p>
-             <h2 style="color: #4FC4FB; font-family: serif; position: relative; left: 420px;"><strong> WHY US? </strong></h2>
+             <h2 style="position: relative; left: 420px;">Why Us?</h2>
 <img src="https://www.ftdimg.com/pics/products/zoom/C16-4839E_600x600.jpg" style="float: left; height:300px; width: 290px; margin-right: 30px; border-radius: 8px;">
             <p style="font-size:20px;">We custom select flower shops in cities across the country with the highest qualification and capabilities to satisfy the most discriminating customer. Most florists we affiliate with have been personally selected to serve on our "Preferred Florist" list that we refer to when sending orders that are not in our delivery area.</p>
 
