--- a/valentine.html
+++ b/valentine.html
@@ -48,6 +48,8 @@
                 <li><a href="unavailable.html">Sympathy</a></li>
                 <li><a href="unavailable.html">Graduation</a></li>
                 <li><a href="unavailable.html">Just Because</a></li>
+                <li><a href="cart.html">Cart <span class='glyphicon glyphicon-shopping-cart'></span></a></li>
+
 
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Other <span class="caret"></span></a>
@@ -88,7 +90,6 @@
                 <div style="background-color: #2c2c2c; height: 2px; width: auto">
                 </div>
             </div>
-<!-- https://wrapbootstrap.com/theme/bootstrap-shopping-cart-WB00223R0  -->
 
             <div class="row"  style="text-align: center; margin-top: 10px;">
 
