--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@ window.onload = loadScript;
                         <ul class="dropdown-menu">
                             <li><a href="about.html">About</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">Frequently Asked Questions</a></li>
+                            <li><a href="faq.html">Frequently Asked Questions</a></li>
                             <li class="active"><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </li>
@@ -103,14 +103,16 @@ window.onload = loadScript;
         </div>
             <h1> Contact Us!</h1>
 
-            <h3> Location </h3>
+            <h3><u>Location</u></h3>
             <p> 5405 N 99th Ave., Glendale, AZ 85305</p>
-            <h3>Email</h3>
+            <h3><u>Email</u></h3>
             <p> <a href="www.gmail.com">blossoms@gmail.com </a></p>
-            <h3>Phone Number</h3>
+            <h3><u>Phone Number</u></h3>
             <p>Number: (623)-738-0045 </p>
             <p>Fax: (623) 872-1682</p>
-            <p></p>
+            <h3><u>Hours open</u></h3>
+            <p>Monday-Saturday: 8am to 6pm</p>
+            <p>Sunday: 9am to 5pm</p>
         </div>
     </div>
 </div>
