--- a/faq.html
+++ b/faq.html
@@ -3,12 +3,11 @@
     <meta charset="UTF-8"> <!-- tell internet to use the latest rendering engine -->
     <meta http-eqiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width = device-width, initial- scle = 1">
-    <title>About</title>
+    <title>Frequently Asked Questions</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="stylesheet.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
@@ -38,7 +37,7 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-default">
+<nav class="navbar navbar-default">
          <div class="container-fluid">
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-center">
@@ -51,12 +50,13 @@
                     <li><a href="unavailable.html">Just Because</a></li>
                     <li><a href="cart.html">Cart <span class='glyphicon glyphicon-shopping-cart'></span></a></li>
 
+
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Other <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li class="active"><a href="about.html">About</a></li>
+                            <li><a href="about.html">About</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="faq.html">Frequently Asked Questions</a></li>
+                            <li class="active"><a href="#faq.html">Frequently Asked Questions</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </li>
@@ -71,22 +71,19 @@
 
                 </form>
             </div>
-        </div>
-
-    </nav>
-
+    </div>
+</nav>
+ 
 <div class="container">
     <div class="jumbotron">
         <div class="container">
-        <img src="blossoms.png" style="float: right; height:300px;">
-        <center> <h2 >About The Company</h2> </center>
-            <p style="font-size:20px;"> Blossoms Flower Shop has been committed to providing the highest quality flowers and plants available at the fairest price possible. Deals are what makes Blossoms so great, we provide amazing gifts for low prices. Our family own shop number one concern is the customer. It is very important for us to strive to give professional attention to every order. Our entire staff is dedicated to delivering the same high level of customer service that valley residents have come to expect.  </p>
-             <h2 style="position: relative; left: 420px;">Why Us?</h2>
-<img src="https://www.ftdimg.com/pics/products/zoom/C16-4839E_600x600.jpg" style="float: left; height:300px; width: 290px; margin-right: 30px; border-radius: 8px;">
-            <p style="font-size:20px;">We custom select flower shops in cities across the country with the highest qualification and capabilities to satisfy the most discriminating customer. You can rest assured when you place an order with Blossoms, our satisfaction guarantee is always included. Once you place your first order with Blossoms, we maintain any special information and all addresses of your recipients for your future use. Next time, all you need to do is make a selection and give us a name! Easy as that! </p>
-            
+            <h1>Frequently Asked Questions</h1>
+
+
+
+
+        </div>
     </div>
-</div>
 </div>
 
 
