--- a/home.html
+++ b/home.html
@@ -80,7 +80,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="about.html">About</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">Frequently Asked Questions</a></li>
+                            <li><a href="faq.html">Frequently Asked Questions</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </li>
