--- a/signin.html
+++ b/signin.html
@@ -52,7 +52,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="about.html">About</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="#">Frequently Asked Questions</a></li>
+                        <li><a href="faq.htmls">Frequently Asked Questions</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </li>
