--- a/signup.html
+++ b/signup.html
@@ -60,8 +60,8 @@
                     <ul class="dropdown-menu">
                         <li><a href="#">About</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="#">Frequently Asked Questions</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="faq.html">Frequently Asked Questions</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </li>
             </ul>
