--- a/valentine.html
+++ b/valentine.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8"> <!-- tell internet to use the latest rendering engine -->
     <meta http-eqiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width = device-width, initial- scle = 1">
-    <title>Sign in</title>
+    <title>Valentines Day</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="loginstyle.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
@@ -56,7 +56,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="about.html">About</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="#">Frequently Asked Questions</a></li>
+                        <li><a href="faq.html">Frequently Asked Questions</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </li>
