finish php html is finished

--- a/faq.html
+++ b/faq.html
@@ -77,8 +77,40 @@
 <div class="container">
     <div class="jumbotron">
         <div class="container">
-            <h1>Frequently Asked Questions</h1>
-
+            <h1>F. A. Q.</h1>            
+    <div class="row">
+        <div class="col-lg-12">
+            <table class="table table-striped table-hover table-bordered">
+                <tbody style="border-color:red;">
+                    <tr>
+                        <td><b>Q) What to expect from Blossoms Flower shop? </b></td>
+                    </tr>
+                    <tr>
+                        <td>A) To view what to expect from Blossoms, <a href="about.html">Click me!</a></td>
+                    </tr>
+                   <tr>
+                        <td> <b>Q) What is the minimum order is required to order from?</b></td>
+                    </tr>
+                    <tr>
+                        <td>A) The limit of the minimum or maxnimum order limit is up to you. Just beware custom orders may be delayed wth purshases of 5 or more at a time. </td>
+                    </tr>
+                    <tr>
+                        <td><b>Q) When does my credit card get charged?</b> </td>
+                    </tr>
+                    <tr>
+                        <td>A) Your credit card gets charged when you place your order.</td>
+                    </tr>
+                   <tr>
+                        <td><b>Q) Will my flowers look exactly like the pictures in the website?</b></td>
+                    </tr>
+                    <tr>
+                        <td>A) No. We will try to be as accurate as possible, but there are often variations during the seasons, between the growers while the images are a very good approximation of the products' shape and color, but some variation can be expected since no two products are alike.</td>
+                    </tr>
+                </tbody>
+            </table>
+            <hr>
+        </div>
+    </div>
 
 
 
