--- a/signin.html
+++ b/signin.html
@@ -52,7 +52,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="about.html">About</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="faq.htmls">Frequently Asked Questions</a></li>
+                        <li><a href="faq.html">Frequently Asked Questions</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </li>
@@ -77,7 +77,7 @@
             <div class="row">
 
                 <div class="col-xs-6">
-                    <p class="lead">Register now for <span class="text-success">FREE</span></p>
+                    <p class="lead">Register now for FREE</p>
                     <ul class="list" style="line-height: 2">
                         <li> See all your orders</li>
                         <li> Great gifts for your love ones</li>
