--- a/home.html
+++ b/home.html
@@ -107,31 +107,35 @@
 
 
 <div class="jumbotron">
+    
     <h2>Welcome to Blossoms!</h2>
-    <p> Welcome to your neibgherhood flowershop. Blossoms specializes in blighting and making the  the mood   </p>
+    <p> Welcome to your neibgherhood flowershop! Where Blossoms specializes in brighting and setting the mood to a beautiful atemepher just like the beautiful flowers themselfs. Blossoms have veriaty of speacails monthly for ever speacail ecaching.     </p>
     <center>
-        <img src="flowers.jpg" style="width: 400px; height: 300px;">
+        <a href="valentine.html">
+            <img src="flowers.jpg" style="width: 550px; height: 340px; margin-bottom:40px;">
+        </a> 
     </center>
 
 
-
-
+<center>
+<h2>Top Products</h2>
+</center>
 
 <div class="row" style="text-align: center">
     <div style="background-color: #2c2c2c; height: 2px; width: auto">
     <div class="col-md-4">
        <img src="http://fyf.tac-cdn.net/images/products/large/BF116-11KM.jpg" style="width: 225px; height: 250px; border-radius: 6px; padding-top: 10px;">
-        <p style="font-size: 17px; letter-spacing: -1px;">28 Red Roses <strike>$100</strike> <i style="color: red;">$85</i> <a href="valentine.html" class="btn btn-success">More info</a>
+        <p style="font-size: 17px; letter-spacing: -1px;">28 Red Roses <strike>$60</strike> <i style="color: red;">$54</i> <a href="valentine.html" class="btn btn-success">More info</a>
     </div>
 
     <div class="col-md-4">
         <img src="http://www.flowerpicturegallery.com/d/12095-1/Red+and+white+roses+valentine+flowers+with+tiny+white+flowers+arrangement.PNG" style="width: 225px; height: 250px; border-radius: 6px; padding-top: 10px;">
-        <p style="font-size: 17px; letter-spacing: -1px;">20 White Red Roses <strike>$100</strike> <i style="color: red;">$85</i> <a href="valentine.html" class="btn btn-success">More info</a>
+        <p style="font-size: 17px; letter-spacing: -1px;">20 White Red Roses <strike>$40</strike> <i style="color: red;">$32</i> <a href="valentine.html" class="btn btn-success">More info</a>
     </div>
 
     <div class="col-md-4">
         <img src="https://sf.tac-cdn.net/images/products/large/BF257-11K.jpg" style="width: 225px; height: 250px; border-radius: 6px; padding-top: 10px;">
-        <p style="font-size: 17px; letter-spacing: -1px;">16 White Lilies <strike>$100</strike> <i style="color: red;">$85</i> <a href="valentine.html" class="btn btn-success">More info</a>
+        <p style="font-size: 17px; letter-spacing: -1px;">16 White Lilies <strike>$50</strike> <i style="color: red;">$42</i> <a href="valentine.html" class="btn btn-success">More info</a>
     </div>
 
 
