--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
         });
     </script>
 </head>
-<body>
+
 
 <div class="boxheader">
     <center>
@@ -109,10 +109,10 @@
 <div class="jumbotron">
     
     <h2>Welcome to Blossoms!</h2>
-    <p> Welcome to your neibgherhood flowershop! Where Blossoms specializes in brighting and setting the mood to a beautiful atemepher just like the beautiful flowers themselfs. Blossoms have veriaty of speacails monthly for ever speacail ecaching.     </p>
+    <p> Welcome to your neighborhood flower shop! Where Blossoms specializes in blighting and setting the mood to a beautiful atmosphere just like the beautiful flowers themselves. Blossoms have variety of specials monthly for ever special occasion.</p>
     <center>
         <a href="valentine.html">
-            <img src="flowers.jpg" style="width: 550px; height: 340px; margin-bottom:40px;">
+            <img src="flowers.jpg" style="width: 620px; height: 340px; margin-bottom:40px;">
         </a> 
     </center>
 
@@ -142,6 +142,7 @@
 </div>
 </div>
 </div>
+    </div>
 
 
 </body>
