--- a/home.html
+++ b/home.html
@@ -51,12 +51,12 @@
         </div>
 
 
-        <img src="blossoms.png" style="width: 220px;">
+        <img src="blossoms.png" style="width: 200px;">
 
     </center>
 
 
-    <nav class="navbar navbar-default" style="margin-top: 26px">
+    <nav class="navbar navbar-default" style="margin-top: 18px">
 
 
 
@@ -67,7 +67,7 @@
                 <ul class="nav navbar-nav navbar-center">
                     <li><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
                     <li><a href="valentine.html">Valentine</a></li>
-                    <li><a href="unavailable.html">Wedding</a></li>
+                    <li><a href="Wedding.html">Wedding</a></li>
                     <li><a href="unavailable.html">Birthday</a></li>
                     <li><a href="unavailable.html">Sympathy</a></li>
                     <li><a href="unavailable.html">Graduation</a></li>
@@ -108,8 +108,8 @@
 
 <div class="jumbotron">
     
-    <h2>Welcome to Blossoms!</h2>
-    <p> Welcome to your neighborhood flower shop! Where Blossoms specializes in blighting and setting the mood to a beautiful atmosphere just like the beautiful flowers themselves. Blossoms have variety of specials monthly for ever special occasion.</p>
+    <h1>Welcome to Blossoms!</h1>
+    <p style="text-align: center"> Welcome to your neighborhood flower shop! Where Blossoms specializes in brightening and setting the mood to a beautiful atmosphere just like the beautiful flowers themselves. Blossoms have variety of specials monthly for ever special occasion.</p>
     <center>
         <a href="valentine.html">
             <img src="flowers.jpg" style="width: 620px; height: 340px; margin-bottom:40px;">
