--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@ window.onload = loadScript;
                 <ul class="nav navbar-nav navbar-center">
                     <li><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
                     <li><a href="valentine.html">Valentine</a></li>
-                    <li><a href="unavailable.html">Wedding</a></li>
+                    <li><a href="Wedding.html">Wedding</a></li>
                     <li><a href="unavailable.html">Birthday</a></li>
                     <li><a href="unavailable.html">Sympathy</a></li>
                     <li><a href="unavailable.html">Graduation</a></li>
