--- a/birthday.html
+++ b/birthday.html
@@ -51,8 +51,8 @@
                 <li><a href="wedding.html">Wedding</a></li>
                 <li class="active"><a href="birthday.html">Birthday</a></li>
                 <li><a href="sympathy.html">Sympathy</a></li>
-                <li><a href="unavailable.html">Graduation</a></li>
-                <li><a href="unavailable.html">Just Because</a></li>
+                <li><a href="graduation.html">Graduation</a></li>
+                <li><a href="just.html">Just Because</a></li>
                 <li><a href="cart.html">Cart <span class='glyphicon glyphicon-shopping-cart'></span></a></li>
 
 
