--- a/graduation.html
+++ b/graduation.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8"> <!-- tell internet to use the latest rendering engine -->
     <meta http-eqiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width = device-width, initial- scle = 1">
-    <title>Sympathy Day</title>
+    <title>Graduation Day</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="loginstyle.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
@@ -35,9 +35,9 @@
         });
     </script>
     <style type="text/css">
-    body {
-        background-color: #BFB572;
-    }
+        body {
+            background-color: #BFB572;
+        }
     </style>
 
 </head>
@@ -50,8 +50,8 @@
                 <li><a href="valentine.html">Valentine</a></li>
                 <li><a href="Wedding.html">Wedding</a></li>
                 <li><a href="birthday.html">Birthday</a></li>
-                <li class="active"><a href="sympathy.html">Sympathy</a></li>
-                <li><a href="graduation.html">Graduation</a></li>
+                <li><a href="sympathy.html">Sympathy</a></li>
+                <li class="active"><a href="graduation.html">Graduation</a></li>
                 <li><a href="just.html">Just Because</a></li>
                 <li><a href="cart.html">Cart <span class='glyphicon glyphicon-shopping-cart'></span></a></li>
 
@@ -84,9 +84,9 @@
     <div class="jumbotron">
         <div class="container">
             <img src="http://www.beneva.com/images/item/info_T2481A2A12062253516.jpg" style="float: right; width: 200px; height:210px; margin-top: 10px; border-radius: 8px; margin-left: 10px;">
-            <h1>Sympathy Flowers</h1>
+            <h1>Graduation Flowers</h1>
 
-            <p style="font-size: 20px;"> Blossoms Flower Shop has many types of flowers to brighten up a gloomy day. With every purchase of flowers will come with its own derivative notes that you can write on.
+            <p style="font-size: 20px;"> Blossoms Flower Shop is the very best at celebrating that special graduation you are attending with many personalized gifts and flowers to give to that amazing person who just graduated. We offer other a
 
             </p>
 
