--- a/valentine.html
+++ b/valentine.html
@@ -43,11 +43,11 @@
             <ul class="nav navbar-nav navbar-center">
                 <li><a href="home.html">Home</a></li>
                 <li class="active"><a href="valentine.html">Valentine</a></li>
-                <li><a href="unavailable.html">Wedding</a></li>
+                <li><a href="Wedding.html">Wedding</a></li>
                 <li><a href="birthday.html">Birthday</a></li>
                 <li><a href="sympathy.html">Sympathy</a></li>
-                <li><a href="unavailable.html">Graduation</a></li>
-                <li><a href="unavailable.html">Just Because</a></li>
+                <li><a href="graduation.html">Graduation</a></li>
+                <li><a href="just.html">Just Because</a></li>
                 <li><a href="cart.html">Cart <span class='glyphicon glyphicon-shopping-cart'></span></a></li>
 
 
