--- a/home.html
+++ b/home.html
@@ -99,16 +99,13 @@
 
     </nav>
 
-
-
-
 </div>
 <div class="container">
 
 
 <div class="jumbotron">
     
-    <h1>Welcome to Blossoms!</h1>
+    <h1 style="text-align: center">Welcome to Blossoms!</h1>
     <p style="text-align: center"> Welcome to your neighborhood flower shop! Where Blossoms specializes in brightening and setting the mood to a beautiful atmosphere just like the beautiful flowers themselves. Blossoms have variety of specials monthly for ever special occasion.</p>
     <center>
         <a href="valentine.html">
