--- a/valentine.html
+++ b/valentine.html
@@ -34,6 +34,11 @@
             });
         });
     </script>
+    <style type="text/css">
+        body {
+            background-color: #C9302C;
+        }
+    </style>
 
 </head>
 
