--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
                 "Contact Info",
                 "Frequently Asked Question",
                 "Personal Profile",
-                "Producta Page",
+                "Product Page",
                 "Home",
                 "Valentine",
                 "Wedding",
@@ -106,7 +106,7 @@ window.onload = loadScript;
             <h3><u>Location</u></h3>
             <p> 5405 N 99th Ave., Glendale, AZ 85305</p>
             <h3><u>Email</u></h3>
-            <p> <a href="www.gmail.com">blossoms@gmail.com </a></p>
+            <p> <a href="https://mail.google.com">blossoms@gmail.com </a></p>
             <h3><u>Phone Number</u></h3>
             <p>Number: (623)-738-0045 </p>
             <p>Fax: (623) 872-1682</p>
