--- a/just.html
+++ b/just.html
@@ -20,7 +20,7 @@
                 "Contact Info",
                 "Frequently Asked Question",
                 "Personal Profile",
-                "Producta Page",
+                "Product Page",
                 "Home",
                 "Valentine",
                 "Wedding",
@@ -51,8 +51,8 @@
                 <li><a href="Wedding.html">Wedding</a></li>
                 <li><a href="birthday.html">Birthday</a></li>
                 <li><a href="sympathy.html">Sympathy</a></li>
-                <li class="active"><a href="graduation.html">Graduation</a></li>
-                <li><a href="just.html">Just Because</a></li>
+                <li><a href="graduation.html">Graduation</a></li>
+                <li class="active"><a href="just.html">Just Because</a></li>
                 <li><a href="cart.html">Cart <span class='glyphicon glyphicon-shopping-cart'></span></a></li>
 
 
