--- a/graduation.html
+++ b/graduation.html
@@ -20,7 +20,7 @@
                 "Contact Info",
                 "Frequently Asked Question",
                 "Personal Profile",
-                "Producta Page",
+                "Product Page",
                 "Home",
                 "Valentine",
                 "Wedding",
