--- a/valentine.html
+++ b/valentine.html
@@ -20,7 +20,7 @@
                 "Contact Info",
                 "Frequently Asked Question",
                 "Personal Profile",
-                "Producta Page",
+                "Product Page",
                 "Home",
                 "Valentine",
                 "Wedding",
@@ -54,6 +54,7 @@
                 <li><a href="graduation.html">Graduation</a></li>
                 <li><a href="just.html">Just Because</a></li>
                 <li><a href="cart.html">Cart <span class='glyphicon glyphicon-shopping-cart'></span></a></li>
+
 
 
                 <li class="dropdown">
